Archive2/5f/37e37113c40b78/output
main.cpp:3:10: error: 'vector' in namespace 'std' does not name a template type
     std::vector<std::vector<Color> >
          ^
